# ml-temporal-fusion-transformer-for-multi-asset-forecasting

./: Makefile  README.md  pyproject.toml  requirements.txt
deployment/api/: app.py
deployment/scripts/: start_server.sh
docs/: mkdocs.yml
docs/docs/: index.md
temporal_fusion_transformer_for_multi_asset_forecasting/: __init__.py  dataset.py  features.py  plots.py
temporal_fusion_transformer_for_multi_asset_forecasting/modeling/: predict.py  train.py
temporal_fusion_transformer_for_multi_asset_forecasting/pipelines/: train_pipeline.py
