[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "temporal_fusion_transformer_for_multi_asset_forecasting"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Jailson Evora" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["temporal_fusion_transformer_for_multi_asset_forecasting"]
include = ["pyproject.toml", "temporal_fusion_transformer_for_multi_asset_forecasting/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["temporal_fusion_transformer_for_multi_asset_forecasting"]
force-sort-within-sections = true

